Implementacion de backend para rrhh